--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/node": "14.0.27",
+    "@types/react": "16.9.43",
+    "gray-matter": "4.0.2",
     "next": "9.5.0",
+    "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-preset-env": "6.7.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-markdown": "4.3.1",
+    "react-syntax-highlighter": "13.0.0",
+    "tailwindcss": "1.6.0",
+    "typeface-roboto": "0.0.75",
+    "typescript": "3.9.7"
+  },
+  "devDependencies": {
+    "prettier": "2.0.5"
   }
 }
